<resources>
    <string name="app_name">Medicalthy</string>
    <string name="preferencesFile">com.grupo10.medicalthy.PREFERENCE_FILE_KEY</string>



    //Auth Activities (Login - Register)
    <string name="signUpTitle">Autentificación</string>
    <string name="signInTitle">Iniciar Sesión</string>
    <string name="signUpButton">Regístrate</string>
    <string name="loginButton">Acceder</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Contraseña</string>
    <string name="ageHint">Edad</string>
    <string name="nameHint">Nombre</string>
    <string name="surnameHint">Apellidos</string>
    <string name="googleButtonText">Iniciar sesión con Google</string>

    //Home Activity
    <string name="homeTitle">Inicio</string>
    <string name="onBackDialogTitle">Salir de Medicalthy</string>
    <string name="onBackDialogMessage">¿Seguro que quieres salir de Medicalthy?</string>

    //Take Picture ACtivity
    <string name="takePicButton">Take Picture</string>

    //Error Messages
    <string name="simpleErrorMessage">Error</string>
    <string name="authErrorMessage">Se ha producido un error al Iniciar Sesion.\nCompruebe que el email tenga el siguiente estilo: ejemplo@gmail.com</string>
    <string name="googleAuthErrorMessage">Se ha producido un error al Iniciar Sesion con Google.\n</string>
    <string name="emptyCredentialsErrorMessage">Correo electrónico i/o contraseña vacíos. Por favor, ingrese el texto restante.</string>
    <string name="lengthCredentialsErrorMessage">El tamaño de contraseña es demasiado corto (mínimo 6 caracteres). Por favor, ingrese el texto restante.</string>
    <string name="ageCredentialsErrorMessage">La edad seleccionada no es válida. Por favor, seleccione una edad entre 1 y 120 .</string>
    <string name="takePicErrorMessage">El sistema no ha podido reconocer el texto de la imagen. Por favor, repita la foto para intentar reconocer el texto </string>
    <string name="takePicPermission">Se necesitan los permisos de la cámara para poder hacer la foto </string>
    <string name="NotificationNumDays">Por favor introduzca un número válido </string>


    //Positive button messages
    <string name="acceptMessage">Aceptar</string>
    <string name="yesMessage">Sí</string>

    //Negative button messages
    <string name="noMessage">No</string>

    //Constants intent IDs
    <string name="intentEmail">IntentEmail</string>
    <string name="provider">Proveedor</string>
    <string name="hacer_foto">Hacer Foto</string>

    //Notifications
    <string name="channelName">Medicalthy</string>
    <string name="channelID">MedicalthyID</string>
    <string name="channelDescription">Canal de notificaciones básicas</string>
    <string name="notificationMessage">Es el momento de tomar la medicación</string>
    <string name="notificationSubText">Hora de la pastilla</string>

    //PlanMedicineActivity
    <string name="planMedicineTitle">Planificar Toma</string>

    //Alerta de consumo responsable
    <string name="responsibleConsumption"> Consumo Responsable</string>
    <string name="consumoResponsable">El tiempo entre toma y toma del medicamento está por debajo del tiempo recomendado.\n La aplicación no se hace responsable del posible mal consumo por parte del paciente. \n ¿Desea continuar?</string>

    //SignInPatientActivity
    <string name="onBackDialogTitle_SignInPatientActivity">Volver a \"Añadir paciente\"</string>
    <string name="onBackDialogMessage_SignInPatientActivity">¿Seguro que quieres volver sin añadir un paciente?</string>

    //HomeActivityCuidador
    <string name="onBackDialogTitle_backToMyUser">Volver a tu página</string>
    <string name="onBackDialogMessage_backToMyUser">¿Seguro que quieres salir de esta persona cuidada?</string>

    //ShowMedicine
    <string name="finExistenciasTitle">¡Fin de existencias!</string>
    <string name="finExistenciasMessage">Se está quedando sin existencias del medicamento.\n ¿Quiere añadirlo a la lista de la compra?</string>
</resources>