<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/btnAddMedicineCuidador"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="10dp"
        android:text="Añadir medicamento"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnShowShotsCuidador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMedicationHistoryCuidador"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="250dp"
        android:text="historial medicacion"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnShowShotsCuidador" />

    <Button
        android:id="@+id/btnShowShotsCuidador"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="10dp"
        android:text="ver tomas"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMedicationHistoryCuidador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddMedicineCuidador" />

</androidx.constraintlayout.widget.ConstraintLayout>