...
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAddMedicine"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="Añadir medicamento"
        app:layout_constraintBottom_toTopOf="@+id/btnPharmacy"
...
